# hub

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
MD/: ANIMATIONS.md  APP_INIT.md  DATABASE.md  DEPENDENCIES.md  ERROR_HANDLING.md  GLOBAL_SEARCH.md  PATTERNS.md  PLAN.md  PROGRESS.md  R2_STRUCTURE.md  SCOPE.md  SEARCH.md  SETUP.md  STRUCTURE.md  phase-0.md
PLAN-PROJECT/: STATUS.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: hardware.rs  mod.rs  webview.rs
src-tauri/src/jobs/: cold_storage.rs
src/config/: constants.ts  r2.ts  supabase.ts
src/hooks/: useContextMenu.ts  useHardware.ts  useOffline.ts  useOptimistic.ts  usePresence.ts  useStorage.ts
src/i18n/: index.ts
src/layouts/: AppLayout.tsx
src/modules/: index.ts
src/screens/: LoginScreen.tsx
src/services/: auth.service.ts  follow.service.ts  layout-realtime.service.ts  message.service.ts  realtime.service.ts  storage.service.ts  user.service.ts
src/store/: auth.store.ts  chat.store.ts  context-menu.store.ts  events.store.ts  feed.store.ts  hardware.store.ts  index.ts  layout.store.ts  offline.store.ts  search.store.ts
src/styles/: animations.css  global.module.css  tokens.css
src/types/: event.types.ts  index.ts  layout.types.ts  message.types.ts  module.types.ts  status.types.ts  user.types.ts
src/utils/: errors.ts  layout-tree.ts  r2-paths.ts
supabase/migrations/: 20240301000000_initial_schema.sql  project.sql
(+100 files in other folders)
