[package]
name = "social-os"
version = "0.1.0"
description = "Social OS Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "social_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-window-state = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-deep-link = "2.0"
window-vibrancy = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
